# ldn-land-productivity

./: .dockerignore  .gitignore  Dockerfile  Executor.ipynb  Makefile  README.md  Test_Load.ipynb  Testing_Averages.ipynb  Testing_Integrals.ipynb  Testing_Load.ipynb  Testing_Processor.ipynb  Testing_Tiles.ipynb  aois.geojson  processor.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-test-docker.yml
examples/: cbers_ndvi.js
fused_udf/: ldn_udf.py
ldn/: __init__.py  aois.geojson  cli.py  processor.py  utils.py
notebooks/: Batch_Job_Submit.ipynb  Executor.ipynb  Get_STAC_Completeness.ipynb  Load_Timeseries.ipynb  Load_Timeseries_Animation.ipynb  MapMaker.ipynb  STAC_Geoparquet.ipynb  Testing_Averages.ipynb  Testing_Integrals.ipynb  Testing_Integrals_With_MODIS.ipynb  Testing_Load.ipynb  Testing_Processor.ipynb  Testing_Tiles.ipynb  map.html
